--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ezdm
 Section: games
 Priority: optional
-Maintainer: A.J. Venter (silentcoder)
+Maintainer: A.J. Venter (ajventer@gmail.com)
 Build-Depends: debhelper (>= 9.2), python-support (>= 1.0.15), python-all-dev (>= 2.7.3), python-simplejson (>= 2.6.1)
 XS-Python-Version: >= 2.7
 Standards-Version: 3.9.4.0
