--- a/debian/control
+++ b/debian/control
@@ -2,18 +2,19 @@ Source: ezdm
 Section: games
 Priority: optional
 Maintainer: A.J. Venter <ajventer@gmail.com>
-Build-Depends: debhelper (>= 9.2), python-support (>= 1.0.15), python-all-dev (>= 2.7.3), python-simplejson (>= 2.6.1)
+Build-Depends: debhelper (>= 9.2), python-support (>= 1.0.15), python-simplejson (>= 2.6.1), python (>=2.7)
 XS-Python-Version: >= 2.7
-Standards-Version: 3.9.4.0
+Standards-Version: 3.9.3.0
 
 Package: ezdm
 Architecture: all
 Homepage: https://github.com/ajventer/ezdm
-XB-Python-Version: ${python:Versions}
-Depends: ${misc:Depends}
+XB-Python-Version: ${python:Versi
+Depends: ${misc:Depends},${python:Depends},python ( >=2.7)
 Suggests: python-easygui 
-Description: Simple interactive helper tools for DM-ing an AD&D second edition game
- This is a simple set of tools for dungeon managers. The current project only targets AD&D 2nd edition rules. 
+Description: Simple interactive helper tools for DM-ing an 
+ AD&D second edition game  This is a simple set of tools for 
+ dungeon managers. The current project only targets AD&D 2nd edition rules. 
  This is not an RPG game, it's some helper tools for people DM-ing real
  games and designed to not get in the way of role-play and story-telling
  but simply help to do the maths during encounters and levelling.
