Fixed tryexec path

--- a/ezdm.desktop
+++ b/ezdm.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=EZDM
 GenericName=Easy Dungeon Master
 Comment=A tookit for AD&D Dungeon Master
-TryExec=/usr/games/games/ezdm
+TryExec=/usr/games/ezdm
 Exec=/usr/games/ezdm
 Categories=Game;RolePlaying;
 Icon=/usr/share/icons/hicolor/128x128/ezdm.png
