--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Package: ezdm
 Architecture: all
 Homepage: https://github.com/ajventer/ezdm
 XB-Python-Version: ${python:Versions}
-Depends: ${misc:Depends},${python:Depends},python ( >=2.7)
+Depends: ${misc:Depends},${python:Depends},python ( >=2.7),python-bottle
 Suggests: python-easygui 
 Description: Simple interactive helper tools for DM-ing an 
  AD&D second edition game  This is a simple set of tools for 
