Conditional support working in template_dict

--- a/ezdm_libs/items/Grappling_hook.json
+++ b/ezdm_libs/items/Grappling_hook.json
@@ -6,7 +6,7 @@
         "silver": "8",
         "gold": "0"
     },
-    "conditionals": "{}",
+    "conditional": "{}",
     "type": "other",
     "cond_sheet": "yes",
     "size": "small"
